--- a/movApp/Views/Films/Details.cshtml
+++ b/movApp/Views/Films/Details.cshtml
@@ -12,28 +12,28 @@
         <div class="col-sm-2">
             <img class="img-thumbnail" src="~@Model.PathImg" asp-append-version="true">
         </div>
-        <div class="col-sm-10">
+        <div style="padding-left:20px" class="col-sm-10">
             <div class="row">
-                <div class="col-sm-3"> Год выпуска: </div>
+                <div class="col-sm-2"> Год выпуска: </div>
                 <div class="col-sm-6">  @Html.DisplayFor(model => model.Year) </div>
             </div>
             <div class="row">
-                <div class="col-sm-3"> Режисер: </div>
+                <div class="col-sm-2"> Режисер: </div>
                 <div class="col-sm-6">  @Html.DisplayFor(model => model.Director) </div>
             </div>
             <div class="row">
                 <div class="col-sm-12"></div>
                 
             </div>
-            <div class="row">
-                <div class="col-sm-12"> @Html.DisplayFor(model => model.Description) </div>
+            <div style="padding-top:30px" class="row">
+                <div class="col-sm-8"> @Html.DisplayFor(model => model.Description) </div>
             </div>
         </div>
     </div>
 
-  
+    <hr />
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> 
 </div>
+
